<resources>
    <string name="app_name">LaBordo</string>
    <string name="mensaje">Mensaje</string>
    <string name="prueba">TAREAS ASIGNADAS</string>
    <string name="prueba2">TAREAS GENERALES</string>
    <string name="prueba3">ALUMNADO</string>
    <string name="actividadesAsignadas">ACTIVIDADES ASIGNADAS</string>
    <string name="actividades">ACTIVIDADES</string>
    <string name="alumnado">ALUMNADO</string>
    <string name="add">Añadir Tarea</string>
    <string name="hintNombreTarea">Nombre de la TAREA/ACTIVIDAD</string>
    <string name="hintDescripcionTarea">Descripción de la TAREA/ACTIVIDAD</string>
    <string name="hintPrecioTarea">Precio de la TAREA/ACTIVIDAD</string>
    <string name="fechaLimite">Fecha de entrega: </string>
    <string name="seleccionFoto">Selecciona imagen</string>
    <string name="botonAsignada">Asignada</string>
    <string name="botonInactiva">Inactiva</string>
    <string name="botonSinAsignar">Sin Asignar</string>
    <string name="asignacion">Selecciona el estado de la TAREA/ACTIVIDAD</string>
    <string name="tituloAlertView">Introduzca los datos:</string>
    <string name="activityQuest">QUESTS</string>
    <string name="actividadesTuyas">TUS ACTIVIDADES</string>
    <string name="profesorado">PROFESORES</string>
    <string name="aceptar">ACEPTAR</string>
    <string name="cancelar">CANCELAR</string>
    <string name="hintUsuario">Introduzca el correo electrónico</string>
    <string name="hintPassword">Introduzca la contraseña</string>
    <string name="botonInicio">Iniciar</string>
    <string name="registroUsuario">¿No tienes cuenta?</string>
    <string name="registrar">Registrar</string>
    <string name="correo">Correo electrónico:</string>
    <string name="DNI">DNI:</string>
    <string name="password">Contraseña:</string>
    <string name="nombre">Nombre:</string>
    <string name="hintNombre">Introduzca su nombre</string>
    <string name="apellidos">Apellidos:</string>
    <string name="hintApellido">Introduzca sus apellidos</string>
    <string name="fechaNacimiento">Fecha Nacimiento:</string>
    <string name="curso">Curso:</string>
    <string name="hintCurso">Introduzca su curso</string>
    <string name="instituto">Instituto:</string>
    <string name="tipoProfesor">Profesor</string>
    <string name="tipoAlumno">Alumno</string>
    <string name="hintDNI">Introduzca su DNI</string>
    <string name="crearUsuario">CREAR</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="tituloSetting">Configuración</string>
    <string name="hintContraseniaSetting1">Nueva contraseña</string>
    <string name="hintContraseniaSetting2">Confirmar nueva contraseña</string>
    <string name="botonSettingContrasenia">Aceptar Contraseña</string>
    <string name="perfil">Ver Perfil</string>
    <string name="cambiarPassword">Cambiar contraseña</string>
    <string name="correoElectronico">Prueba</string>
    <string name="tituloLogout">¿Quieres cerrar sesión?</string>
    <string name="Produced">PRODUCED BY</string>
    <string name="nombre1">Iván García Peralta</string>
    <string name="nombre2">Ayman Kamal Boulhand</string>
    <string name="tipoCuenta">Tipo de cuenta:</string>
    <string name="perfil2">PERFIL</string>
    <string name="saldoCuenta">Saldo: </string>
    <string name="DATABASE_URL">jdbc:mysql://192.168.43.141:3306/labordo?useUnicode=true&amp;characterEncoding=utf8</string>
    <string name="USER">root</string>
    <string name="PASSWORD">L4b0rd0#</string>

    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

</resources>