<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <com.google.android.material.tabs.TabLayout
        android:id="@+id/Profesor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/Actividades_Asignadas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/actividadesAsignadas" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/Actividades"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/actividades" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/Alumnado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alumnado" />
    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/Vista_Pagina"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/Tab_Layout" />

</RelativeLayout>