<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".usuarios.Main_Profesorado">


    <com.google.android.material.tabs.TabLayout
        android:id="@+id/Alumno"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/ActividadesQuest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activityQuest" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/ActividadesTuyas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/actividadesTuyas" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/Profesorado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profesorado" />
    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/Vista_Pagina"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/Alumno" />

</RelativeLayout>