<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/icono"
        android:layout_width="400dp"
        android:layout_height="400dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:src="@mipmap/ic_launcher_foreground" />

    <TextView
        android:id="@+id/titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="390dp"
        android:fontFamily="@font/montserrat_thin"
        android:text="@string/Produced"
        android:textColor="@color/prueba"
        android:textSize="30sp"
        android:textStyle="normal" />

    <TextView
        android:id="@+id/nombre1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="440dp"
        android:fontFamily="@font/montserrat_thin"
        android:text="@string/nombre1"
        android:textColor="@color/prueba"
        android:textSize="20sp"
        android:textStyle="normal" />

    <TextView
        android:id="@+id/nombre2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="470dp"
        android:fontFamily="@font/montserrat_thin"
        android:text="@string/nombre2"
        android:textColor="@color/prueba"
        android:textSize="20sp"
        android:textStyle="normal" />

</RelativeLayout>