<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.CambiarPassword">

    <EditText
        android:id="@+id/passwordNueva"
        android:layout_width="324dp"
        android:layout_height="50dp"
        android:layout_marginTop="140dp"
        android:layout_marginStart="20dp"
        android:fontFamily="@font/open_sans"
        android:hint="@string/hintContraseniaSetting1"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="" />

    <EditText
        android:id="@+id/passwordNueva2"
        android:layout_width="324dp"
        android:layout_height="50dp"
        android:layout_marginTop="204dp"
        android:layout_marginStart="20dp"
        android:fontFamily="@font/open_sans"
        android:hint="@string/hintContraseniaSetting2"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="" />

    <Button
        android:id="@+id/botonAceptarPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="300dp"
        android:fontFamily="@font/open_sans"
        android:onClick="cambiarContrasenia"
        android:text="@string/botonSettingContrasenia"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordNueva2" />
</RelativeLayout>