<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.Perfil">

    <ImageView
        android:id="@+id/fotoPerfilUsuario"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="104dp"
        android:layout_centerHorizontal="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/sin_foto" />

    <Button
        android:id="@+id/botonFoto"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="104dp"
        android:layout_centerHorizontal="true"
        android:background="@android:color/transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/tipo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="400dp"
        android:fontFamily="@font/open_sans"
        android:text="@string/tipoCuenta"
        android:textColor="@color/prueba" />

    <TextView
        android:id="@+id/tipoDeCuenta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="400dp"
        android:fontFamily="@font/open_sans"
        android:textColor="@color/prueba"
        android:layout_toEndOf="@+id/tipo"/>


    <TextView
        android:id="@+id/DNI"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="450dp"
        android:fontFamily="@font/open_sans"
        android:text="@string/DNI"
        android:textColor="@color/prueba" />

    <TextView
        android:id="@+id/DNIdelUsuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="450dp"
        android:fontFamily="@font/open_sans"
        android:textColor="@color/prueba"
        android:layout_toEndOf="@+id/DNI"/>

    <TextView
        android:id="@+id/CorreoElectronico"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="500dp"
        android:fontFamily="@font/open_sans"
        android:text="@string/correo"
        android:textColor="@color/prueba" />

    <TextView
        android:id="@+id/correoDelUsuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="500dp"
        android:fontFamily="@font/open_sans"
        android:textColor="@color/prueba"
        android:layout_toEndOf="@+id/CorreoElectronico"/>

    <TextView
        android:id="@+id/tituloPerfil"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="49dp"
        android:fontFamily="@font/montserrat_thin"
        android:text="@string/perfil2"
        android:textColor="@color/prueba"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</RelativeLayout>